# Successful-kittyspace

./: README.md  debug.keystore.base64  fixer.js  metadata.json  my_script_2.js
app/: build.gradle.kts  obfuscator.js
app/applet/: my_script.js  obfuscate_more.js  obfuscator.js
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/kittyspace/: KittyDumpService.kt  KittyViewModel.kt  MainActivity.kt  NativeDumper.kt
app/src/main/java/com/kittyspace/dumper/: KittyDumperEngine.kt
app/src/main/java/com/kittyspace/ui/: AdvancedTabHelper.kt  KittySpyMenuService.kt  KittySpySaveActivity.kt  Obfuscator.kt
app/src/main/res/drawable/: ic_gmail.xml  ic_launcher_foreground.xml  ic_telegram.xml  ic_youtube.xml
app/src/main/res/values/: strings.xml
temp_repo/: fix_adv.js  fix_advanced.js  my_script.js
temp_repo/app/: build.gradle.kts  obfuscator.js  obfuscator.kts  proguard-rules.pro
temp_repo/app/src/main/: AndroidManifest.xml
temp_repo/app/src/main/cpp/: KittyMemory.cpp
temp_repo/app/src/main/java/com/kittyspace/: KittyAppEntity.kt  KittyDumpService.kt  NativeDumper.kt
temp_repo/app/src/main/java/com/kittyspace/dumper/: KittyDumperEngine.kt
temp_repo/app/src/main/res/drawable/: ic_gmail.xml  ic_youtube.xml
